--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,8 +27,10 @@ AllCops:
     - '**/Berksfile'
     - '**/Cheffile'
     - '**/Vagabondfile'
+    - '**/*.rb'
   Exclude:
     - 'vendor/**/*'
+    - 'bin/**/*'
     - 'db/schema.rb'
 
   DisplayCopNames: true
